Fix search input being too big

--- a/client/web/src/site-admin/SiteAdminRepositoriesPage.module.scss
+++ b/client/web/src/site-admin/SiteAdminRepositoriesPage.module.scss
@@ -1,7 +1,3 @@
 .alert-wrapper {
     margin-top: 1rem;
 }
-
-.search-repositories-input {
-    width: 70%;
-}
